<resources>
    <string name="app_name">IsmaCuts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_booking">Cita Previa</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_settings">Settings</string>
    <string name="bottom_menu_dashboard">Dashboard</string>
    <string name="professional">Professional</string>
    <string name="book">Book</string>
    <string name="appointment">Appointment</string>
    <string name="bookings">Bookings</string>
</resources>