<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".users.booking.UsersBookingFragment"
        android:background="?attr/colorBackground"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/bookingFragmentToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="?android:attr/homeAsUpIndicator"
            app:title="@string/appointment"
            app:titleTextColor="?attr/textColor" />

        <TextView
            android:id="@+id/professionalsLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"
            android:text="@string/professional"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/professionalsBookingRV"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professionalsLabelTV" />

        <androidx.cardview.widget.CardView
            android:id="@+id/mainSlotCardView"
            android:layout_width="370dp"
            android:layout_height="230dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professionalsBookingRV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/main_gradient">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bookingDaysRecyclerView"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.313"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/availableHoursRecyclerView"
                    android:layout_width="319dp"
                    android:layout_height="120dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/bookingDaysRecyclerView"
                    app:layout_constraintVertical_bias="0.234" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/confirmBookingButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/main_gradient"
            android:text="@string/book"
            android:textColor="?attr/textColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mainSlotCardView"
            app:layout_constraintVertical_bias="0.42" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>